--- a/gui.ui
+++ b/gui.ui
@@ -27,7 +27,7 @@
      <x>0</x>
      <y>0</y>
      <width>1280</width>
-     <height>37</height>
+     <height>22</height>
     </rect>
    </property>
    <property name="nativeMenuBar">
@@ -66,72 +66,7 @@
    </attribute>
    <widget class="QWidget" name="controls_widget">
     <layout class="QGridLayout" name="controls_grid">
-     <item row="4" column="0">
-      <widget class="QCheckBox" name="load_mot">
-       <property name="text">
-        <string>Load MOT</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="3">
-      <widget class="QPushButton" name="ai_options">
-       <property name="text">
-        <string>Options</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="3">
-      <widget class="QPushButton" name="ai">
-       <property name="text">
-        <string>AI</string>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="4">
-      <widget class="QPushButton" name="multigo">
-       <property name="text">
-        <string>Multi Go</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="4">
-      <widget class="QPushButton" name="multigo_options">
-       <property name="text">
-        <string>Options</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Orientation::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="1" column="0">
-      <widget class="QCheckBox" name="save_runs">
-       <property name="text">
-        <string>Save Runs</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="5">
-      <widget class="QLCDNumber" name="fluorescence">
-       <property name="maximumSize">
-        <size>
-         <width>128</width>
-         <height>16777215</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="5">
       <widget class="QPushButton" name="run_experiment">
        <property name="maximumSize">
         <size>
@@ -144,14 +79,76 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="4">
+      <widget class="QLCDNumber" name="fluorescence">
+       <property name="maximumSize">
+        <size>
+         <width>128</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="3">
+      <widget class="QPushButton" name="multigo">
+       <property name="text">
+        <string>Multi Go</string>
+       </property>
+      </widget>
+     </item>
      <item row="4" column="2">
-      <spacer name="spacer_2">
+      <widget class="QPushButton" name="ai">
+       <property name="text">
+        <string>AI</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QCheckBox" name="save_runs">
+       <property name="text">
+        <string>Save Runs</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QCheckBox" name="load_mot">
+       <property name="text">
+        <string>Load MOT</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="3">
+      <widget class="QPushButton" name="multigo_options">
+       <property name="text">
+        <string>Options</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QPushButton" name="ai_options">
+       <property name="text">
+        <string>Options</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <spacer name="verticalSpacer">
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="4" column="1">
+      <spacer name="horizontalSpacer">
        <property name="orientation">
-        <enum>Qt::Orientation::Horizontal</enum>
+        <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>40</width>
+         <width>16777215</width>
          <height>20</height>
         </size>
        </property>
@@ -169,80 +166,99 @@
    </attribute>
    <widget class="QWidget" name="stages_widget">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="6">
-      <layout class="QVBoxLayout" name="copied_container"/>
+     <item row="2" column="4">
+      <layout class="QVBoxLayout" name="label_container">
+       <item>
+        <widget class="QLabel" name="spacer">
+         <property name="minimumSize">
+          <size>
+           <width>128</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>128</width>
+           <height>16</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
-     <item row="1" column="3">
-      <widget class="QLabel" name="dc_label">
-       <property name="minimumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>DC Values</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignmentFlag::AlignCenter</set>
-       </property>
-      </widget>
+     <item row="2" column="7">
+      <layout class="QVBoxLayout" name="copied_container">
+       <item>
+        <widget class="QLabel" name="copied_label">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>128</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>128</width>
+           <height>16</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>Copied</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item row="2" column="3">
-      <layout class="QVBoxLayout" name="dc_container"/>
+      <layout class="QVBoxLayout" name="dc_container">
+       <item>
+        <widget class="QLabel" name="dc_label">
+         <property name="minimumSize">
+          <size>
+           <width>128</width>
+           <height>25</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>128</width>
+           <height>16</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>DC Values</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
-     <item row="2" column="4">
-      <layout class="QVBoxLayout" name="label_container"/>
-     </item>
-     <item row="1" column="6">
-      <widget class="QLabel" name="copied_label">
-       <property name="enabled">
-        <bool>false</bool>
+     <item row="1" column="3">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
        </property>
-       <property name="minimumSize">
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
         <size>
-         <width>128</width>
-         <height>16</height>
+         <width>0</width>
+         <height>31</height>
         </size>
        </property>
-       <property name="maximumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Copied</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignmentFlag::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="4">
-      <widget class="QLabel" name="spacer">
-       <property name="minimumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>128</width>
-         <height>16</height>
-        </size>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
+      </spacer>
      </item>
      <item row="1" column="5" rowspan="2">
       <widget class="QTabWidget" name="stages_tabs">
@@ -281,13 +297,13 @@
       <layout class="QFormLayout" name="hidden_form"/>
      </item>
      <item>
-      <spacer name="spacer_3">
+      <spacer name="horizontalSpacer_2">
        <property name="orientation">
-        <enum>Qt::Orientation::Horizontal</enum>
+        <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>600</width>
+         <width>40</width>
          <height>20</height>
         </size>
        </property>
@@ -309,7 +325,8 @@
   </widget>
   <action name="action_save">
    <property name="icon">
-    <iconset theme="document-save"/>
+    <iconset theme="document-save">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Save</string>
@@ -320,7 +337,8 @@
   </action>
   <action name="action_load">
    <property name="icon">
-    <iconset theme="document-open"/>
+    <iconset theme="document-open">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Load</string>
